--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,11 @@ layout: default
   </div>
 </div>
 <aside class="sidebar">
+    <div>
+    <div><b style="font-weight:bold;">About Me</b></div>
+    Chenny Xie {xie.chenny@gmail.com}<br/>
+    Master candidate ^ ^b.
+    </div>
   {% if site.blog_index_asides.size %}
     {% include_array blog_index_asides %}
   {% else %}
